--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,7 @@ branches:
   only:
     - master
 language: python
-python:
-    - 2.7
-sudo: required
-install:
-    - pip install -r requirements.txt
-    - python setup.py install
-script:
-    - trial swftp
+python: "2.7"
+sudo: false
+install: "pip install --user -r requirements.txt"
+script: "trial swftp"
