--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
     - master
 language: python
 python: "2.7"
+cache: pip
 sudo: false
-install: "pip install --user -r requirements.txt"
+install: "pip install -r requirements.txt"
 script: "trial swftp"
