smtp tests and funct_test correct ignorance

--- a/etc/swftp/swftp.conf.sample
+++ b/etc/swftp/swftp.conf.sample
@@ -26,6 +26,7 @@
 #sessions_per_user = 10
 #connection_timeout = 240
 #welcome_message = Welcome to SwFTP - An FTP/SFTP interface for Openstack Swift
+#cert = /etc/swftp/cert.pem
 
 #auth_url = http://127.0.0.1:8080/auth/v1.0
 #num_persistent_connections = 20
